--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "rootDir": "src",
       "outDir": "dist",
       "declaration": true,
-      "sourceMap": true,
+      "sourceMap": false,
       "module": "esnext",
       "target": "esnext",
       "moduleResolution": "node",
@@ -19,4 +19,3 @@
       ]
     }
   }
-  
