--- a/package.json
+++ b/package.json
@@ -45,21 +45,22 @@
     "top-app-bar"
   ],
   "dependencies": {
-    "lit-element": "^2.1.0",
-    "lit-html": "^1.0.0",
-    "tslib": "^1.9.3"
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.1",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.3",
+    "axios": ">=0.18.1",
+    "browser-sync": "^2.26.7",
     "compression": "^1.7.4",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "express-cache-headers": "^0.1.4",
     "express-transform-bare-module-specifiers": "^1.0.2",
-    "rollup": "^1.10.0",
+    "rollup": "^1.19.3",
     "rollup-plugin-minify-html-literals": "^1.2.2",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.1.1",
     "rollup-plugin-typescript": "^1.0.1",
-    "typescript": "^3.4.3"
+    "typescript": "^3.5.3"
   }
 }
