Add storybook dependencies Use docs built version

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "rollup -c",
     "mypublish:pre": "npm run dec && npm run build && cp readme.md package.json dist",
     "mypublish": "npm run mypublish:pre && npm publish dist --tag latest --access=public",
+    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Simon Green <simon@captaincodeman.com> (https://github.com/captaincodeman)",
@@ -50,13 +52,21 @@
     "tslib": "^1.10.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-viewport": "^5.1.11",
+    "@storybook/cli": "^5.1.11",
+    "@storybook/polymer": "^5.1.11",
+    "@storybook/theming": "^5.1.11",
     "axios": ">=0.18.1",
+    "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-cache-headers": "^0.1.4",
     "express-transform-bare-module-specifiers": "^1.0.2",
-    "rollup": "^1.19.4",
+    "polymer-webpack-loader": "^2.0.3",
+    "rollup": "^1.20.1",
     "rollup-plugin-minify-html-literals": "^1.2.2",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.1",
